# melang

./: LICENSE  Makefile  README  README.md  centunext  centuprep  extract-wiki-pages  extract-wikipedia-pages  german-adj-infl  get-pronunciations  goog-vs-lcmc  judy.c  kilo-next  kilo-prep  lk  make-dict  melang.cabal  perf-info  proc-hanzi-json  proc-lcmc  proc-raw-gb-data  proc-zh-en-json  r  run-zh-en  score-tatoeba  wiki-word-index  wikt-pull-lang  wikt-to-defs  wikt2  zh-en-process  zh-spacy.txt  zz
anki/: dump-sql  fillFutureBlanks.hs  next-words  shareBestParts.hs
data/: top-pinyin-syllable-freq  top-pinyin-syllable-freq-weighted-ign100  top_pinyin_syllable_freq  top_pinyin_syllable_freq_weighted  top_pinyin_syllable_freq_weighted_ign100
data/centudeck/: top100-by-hand-preseving-pinyin
data/cmn/: deck.txt  dict  gb-rec  gb.txt  pinyin  samples
data/cmn/centudeck/: MandoGloss1k.txt  MandoGloss880.txt  deck-tsv.txt  deck.txt
data/cmn/dict-analysis/: a.hs  a.out  extreme-homophones  word-length-and-homophones
data/cmn/kilo-deck/: mando-gloss-1k.txt  mando-gloss-2k.txt  notes
data/cmn/pinyin-rules/: rules
data/eng/: README.eng-simple-dict  eng.run-info
data/spa/: dict  dict-10k.txt
html/: german-adj-infl.html
make/: GoogDefs  GoogMem  GoogRecent  ParseWiktionary
parse-wiktionary/: README.md
src/: BSUtil.hs  CmnSentenceWords.hs  ExtractWikiPages.hs  ExtractWikipediaPages.hs  Freedict.hs  GB1.hs  GoogClean.hs  GoogDefs.hs  GoogMem.hs  GoogMerge.hs  GoogRecent.hs  GoogResultsToPpm.hs  Lang.hs  LangCmn.hs  LookupNounInflections.hs  MainZSentToWds.hs  MediaWiki.hs  MostCommonTone.hs  NGrams.hs  PairUtil.hs  ParseWiktionary.hs  PinyinSyllableFreq.hs  ProcHanziJson.hs  ProcZhEnJson.hs  Str.hs  TextChFreq.hs  Utf8Check.hs  WLk.hs  WiktDefsByLang.hs  WiktToDefs.hs  Wubi.hs  WubiPairs.hs  ZhEnProcess.hs  book_hard_words.hs  get3k.hs  make1.hs  prefixDo.hs  songlyr.txt  wubipairs.hs
src/Centudeck/: Check.hs  Prep.hs
src/Cmn/: Cedict.hs  Centudeck.hs  Dict.hs  GoogBk.hs  GoogBk1Grams.hs  KiloDeck.hs  KiloPrep.hs  Lang.hs  Lcmc.hs  SentenceWords.hs  SentenceWords2.hs  TextWds.hs  WdInfo.hs  WdInfo2.hs
src/Main/: a.hs  anki-hsk-sentences.hs  anki-hsk-share-best-parts.hs  by-speech-part.hs  cmn-text-wds.hs  common-syllables.hs  extract-de-wikt-noun-forms.hs  extract-wiki-pages.hs  gb-sum-alt-forms.hs  gb1-count.hs  german-adj-infl.hs  get-pronunciations.hs  goog-second-source.hs  goog-vs-lcmc.hs  gww-word-count.hs  hilite-wds.hs  hsk-sentences.hs  kilo-prep.hs  lk.hs  make-dict.hs  old-wiki-word-index.hs  optimize-wubi.hs  proc-lcmc.hs  proc-raw-gb-data.hs  pull-words.hs  ruff-words.hs  score-tatoeba.hs  tat-count-pairs.hs  tat-count-words.hs  tat-gen-cloze.hs  wiki-word-index.hs  wikt-alt-forms.hs  wikt-inflections.hs  wikt-pull-all.hs  wikt-pull-lang.hs  wikt-to-defs.hs  wikt2.hs  wiktde-noun-forms.hs  wlk.hs  wtf-wiki-word-index.hs  (+3 more)
src/New/: ProcCmnGoog1Grams1.hs  ProcCmnGoog1Grams2.hs
src/Sentences/: a.hs
src/Util/: BS.hs  CoverZip.hs  DT.hs  Display.hs  Json.hs  Pair.hs  Process.hs  ReadLines.hs  SciSigFig.hs  SigFig.hs
src/Wikt/: ProcDefs.hs
src/ngrams/: merge.sh
src/old/: WubiKeymapForce1.hs
src/pt-irreg/: a.hs  out
zh-sents/: 2.hs  Makefile  WdPinyinGloss.hs
(+32 files in other folders)
