name:          melang
version:       0.1
license:       MIT
license-file:  LICENSE
author:        dan corson <danl@alum.mit.edu>
synopsis:      lang study
build-type:    Simple
cabal-version: >= 1.7.1

library 
  exposed-modules:
      Lang.Zh.WdPinyin
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall -Wcompat -Wincomplete-record-updates
      -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base
    , aeson
    , bytestring
    , directory
    , process
    , serialise
    , split
    , text
    , unordered-containers
    , utf8-string
    , vector
